<resources>
    <string name="app_name">Dashboard App</string>
    <string name="PT_Name">PT XYZ</string>
    <string name="location">Sleman</string>
    <string name="informasi_perubahan">Informasi perubahan data katalog</string>
    <string name="pembaruan_terakhir">Pembaruan terakhir:</string>
    <string name="waktu_pembaruan_terakhir">16-06-2022 15:00:01</string>
    <string name="pembaruan_selanjutnya">Pembaruan selanjutnya:</string>
    <string name="data_pembaruan_selanjutnya">17-06-2022 15:00:01</string>
    <string name="katalog_tender">Katalog Tender</string>
    <string name="tender_tersimpan">Tender Tersimpan</string>
    <string name="laporan_statistik">Laporan Statistik</string>
    <string name="pengaturan">Pengaturan</string>
</resources>